Added fourth row

--- a/tickevents-placeholder/src/app/footer/footer.component.html
+++ b/tickevents-placeholder/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<div class="row no-gutters footer w mnh-25vh mt-5 pt-5 pb-2 justify-content-center fs-l">
+<div class="row no-gutters footer w mnh-25vh py-5 justify-content-center fs-l px-4">
     <div class="col-12 text-center mb-3">
         <img src="../../assets/Logo White.svg" alt="Tickevents logo" class="footer-logo">
     </div>
@@ -28,8 +28,9 @@
         </div>
     </div>
     <div class="w-100"></div>
-    <div class="col-10 col-md-8 col-lg-7 col-xl-6 border-top border-secondary text-center pt-2 gr small">
+    <div class="col-10 col-md-8 col-lg-7 col-xl-6 border-top border-secondary text-center pt-2 gr fs-xs">
         <span>Tickevents is een product van Rondelle Software Solutions. &copy; 2020 Rondelle Software Solutions. Alle
-            rechten voorbehouden.</span>
+            rechten voorbehouden.</span> 
+            Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
     </div>
 </div>
