Added difference section. Updated footer

--- a/tickevents-placeholder/src/app/footer/footer.component.css
+++ b/tickevents-placeholder/src/app/footer/footer.component.css
@@ -1,10 +1,11 @@
-.footer {
-    background: linear-gradient(270deg, #092134, #0C2C45);
-}
-
 .footer-logo {
     width: auto;
     height: auto;
     max-height: 100px !important;
     max-width: 100% !important;
+}
+
+.bg-blue {
+    padding-top: 100px !important;
+    padding-bottom: 20px !important;
 }
