--- a/tickevents-placeholder/src/app/home/home.component.html
+++ b/tickevents-placeholder/src/app/home/home.component.html
@@ -52,13 +52,13 @@
 	</div>
 
 	<!-- The second part of the website that you'll see when scrolling down -->
-	<div class="row no-gutters blue py-5">
+	<div class="row no-gutters blue section-padding">
 		<div class="col">
 			<div class="container px-4 px-md-0">
 				<div class="row no-gutters align-content-center">
 
 					<!-- Tickets image -->
-					<div class="col-12 col-md-7 text-center order-2 order-md-1">
+					<div class="col-12 col-md-7 text-left order-2 order-md-1">
 						<img src="../assets/double-tickets.svg" alt="tickets" class="tickets-img-1 px-3">
 					</div>
 					<!-- End tickets image -->
@@ -89,7 +89,7 @@
 	</div>
 
 	<!-- Reviews section carousel -->
-	<div class="row no-gutters justify-content-center third-row py-5 align-content-center mnh-25vh">
+	<div class="row no-gutters justify-content-center bg-blue section-padding align-content-center mnh-25vh">
 		<div class="container px-4 px-md-0">
 			<div id="quoteCarousel" class="carousel slide" data-ride="carousel">
 				<div class="carousel-inner">
@@ -150,7 +150,8 @@
 		</div>
 	</div>
 
-	<div class="row no-gutters py-5">
+	<!-- Personal attention row -->
+	<div class="row no-gutters section-padding">
 		<div class="col">
 			<div class="container px-4 px-md-0">
 				<div class="row">
@@ -171,8 +172,55 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-12 col-md-7 text-center">
+					<div class="col-12 col-md-7 text-right">
 						<img src="../../assets/friendship.svg" alt="tickets" class="tickets-img-2 px-3">
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- The Tickevents Flow -->
+	<div class="row no-gutters section-padding bg-blue">
+		<div class="col">
+			<div class="container px-4 px-md-0">
+				<div class="row">
+					<div class="col-12 col-md-7 text-left">
+						<img src="../../assets/combo.svg" alt="tickets" class="tickets-img-2 px-3">
+					</div>
+					<div class="col-12 col-md-5">
+						<div class="row align-content-center h-100">
+							<div class="col-12">
+								<h5 class="m-0">Verregaande inzichten</h5>
+							</div>
+							<div class="col-12">
+								<h2 class="section-title">Hoe kan je nóg meer tickets verkopen?
+								</h2>
+							</div>
+							<div class="col-12">
+								<p>Met de uitgebreide analysemogelijkheden van Tickevents heb je veel inzicht in jouw
+									evenement. Hiermee kan je voor je volgende evenement nieuwe strategieën bedenken op
+									basis van jouw metrieken</p>
+							</div>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- Afspraken row -->
+	<div class="row no-gutters section-padding">
+		<div class="col">
+			<div class="container px-5 px-md-0">
+				<div class="row px-5">
+					<div class="col-12 px-5">
+						<h5 class="pink">Het Tickevents verschil</h5>
+						<h2 class="text-left section-title blue success">
+							Tickevents is het enige online ticketingplatform dat succesvol scherpe servicekosten met een
+							waanzinnige klantervaring kan combineren
+						</h2>
 					</div>
 				</div>
 			</div>
@@ -182,5 +230,3 @@
 	<!-- Footer -->
 	<app-footer></app-footer>
 </div>
-
-<router-outlet></router-outlet>
