--- a/tickevents-placeholder/src/app/footer/footer.component.html
+++ b/tickevents-placeholder/src/app/footer/footer.component.html
@@ -1,36 +1,36 @@
 <!-- Footer -->
-<div class="row no-gutters footer w mnh-25vh py-5 justify-content-center fs-l px-4">
-    <div class="col-12 text-center mb-3">
-        <img src="../../assets/Logo White.svg" alt="Tickevents logo" class="footer-logo">
-    </div>
-    <div class="w-100"></div>
-    <div class="col text-center mb-2">
-        <i class="far fa-envelope-open mr-3"></i>info@tickevents.nl
-    </div>
-    <div class="w-100"></div>
-    <div class="col text-center mb-2">
-        <i class="fas fa-phone mr-3"></i>(+31) 6 40096718
-    </div>
-    <div class="w-100"></div>
-    <div class="col text-center mb-2">
-        <span class="font-weight-bold">KvK:</span> 78568706
-    </div>
-    <div class="w-100"></div>
-    <div class="col text-center mb-2">
-        <span class="font-weight-bold">BTW-ID:</span> NL03348034B41
-    </div>
-    <div class="w-100"></div>
-    <div class="col mt-5 mb-4">
-        <div class="row no-gutters justify-content-center">
-            <div class="col-auto"><a routerLink="/disclaimer" class="link gr mr-2 ml-2">Disclaimer</a></div>
-            <div class="col-auto"><a routerLink="/privacy" class="link gr mr-2 ml-2">Privacybeleid</a></div>
-            <div class="col-auto"><a routerLink="/contact" class="link gr mr-2 ml-2">Contact</a></div>
+<div class="row no-gutters bg-blue w mnh-25vh fs-l">
+    <div class="container px-4 px-md-0">
+
+        <div class="col-12 text-center mb-3">
+            <img src="../../assets/Logo White.svg" alt="Tickevents logo" class="footer-logo">
+        </div>
+        <div class="col-12 text-center mb-2">
+            <i class="far fa-envelope-open mr-3"></i>info@tickevents.nl
+        </div>
+        <div class="col-12 text-center mb-2">
+            <i class="fas fa-phone mr-3"></i>(+31) 6 40096718
+        </div>
+        <div class="col-12 text-center mb-2">
+            <span class="font-weight-bold">KvK:</span> 78568706
+        </div>
+        <div class="col-12 text-center mb-2">
+            <span class="font-weight-bold">BTW-ID:</span> NL03348034B41
+        </div>
+        <div class="col-12 mt-5 mb-4">
+            <div class="row no-gutters justify-content-center">
+                <div class="col-auto"><a routerLink="/disclaimer" class="link gray mr-2 ml-2">Disclaimer</a></div>
+                <div class="col-auto"><a routerLink="/privacy" class="link gray mr-2 ml-2">Privacybeleid</a></div>
+                <div class="col-auto"><a routerLink="/contact" class="link gray mr-2 ml-2">Contact</a></div>
+            </div>
+        </div>
+        <div class="col-12 border-top border-secondary text-center pt-2 gray fs-xs">
+            <span>Tickevents is een product van Rondelle Software Solutions. &copy; 2020 Rondelle Software Solutions.
+                Alle
+                rechten voorbehouden.</span>
+            Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a
+                href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
         </div>
     </div>
-    <div class="w-100"></div>
-    <div class="col-10 col-md-8 col-lg-7 col-xl-6 border-top border-secondary text-center pt-2 gr fs-xs">
-        <span>Tickevents is een product van Rondelle Software Solutions. &copy; 2020 Rondelle Software Solutions. Alle
-            rechten voorbehouden.</span> 
-            Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
-    </div>
+
 </div>
