--- a/tickevents-placeholder/src/app/header/header.component.css
+++ b/tickevents-placeholder/src/app/header/header.component.css
@@ -27,3 +27,28 @@
 .fas.fa-bars {
     color: black;
 }
+
+.btn {
+    background-color: #5D9881;
+    color: white;
+    /* font-weight: 500; */
+    /* font-size: 1.1em; */
+    transition-duration: 0s;
+    border-radius: 10px;
+    height: 45px;
+    padding: 8px;
+    box-shadow: 0 5px #9AC1B2;
+    transition: background-color 0.2s ease;
+}
+
+.btn:hover {
+    background-color: #467261;
+    transition: background-color 0.2s ease;
+}
+
+.btn:active {
+    background-color: #467261;
+    box-shadow: 0 3px #294F53;
+    transform: translateY(4px);
+    transition: background-color 0.2s ease;
+}
