--- a/tickevents-placeholder/src/app/home/home.component.css
+++ b/tickevents-placeholder/src/app/home/home.component.css
@@ -10,31 +10,6 @@
     font-weight: 400;
 }
 
-.btn {
-    background-color: #5D9881;
-    color: white;
-    font-weight: 500;
-    font-size: 1.1em;
-    transition-duration: 0s;
-    border-radius: 10px;
-    height: 45px;
-    padding: 8px;
-    box-shadow: 0 5px #9AC1B2;
-    transition: background-color 0.2s ease;
-}
-
-.btn:hover {
-    background-color: #467261;
-    transition: background-color 0.2s ease;
-}
-
-.btn:active {
-    background-color: #467261;
-    box-shadow: 0 3px #294F53;
-    transform: translateY(4px);
-    transition: background-color 0.2s ease;
-}
-
 .content {
     padding-top: 5vh;
     padding-bottom: 5vh;
@@ -148,7 +123,7 @@ ol li::before {
 }
 
 .quote {
-    line-height: 2rem !important;
+    line-height: 1.6rem !important;
 }
 
 .carousel-caption {
@@ -180,6 +155,17 @@ ol li::before {
     font-weight: 300 !important;
 }
 
+.tickets-img-3 {
+    max-width: 100%;
+    width: auto;
+    max-height: 100%;
+    margin-right: auto;
+    margin-left: 0;
+    border-radius: 15px;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
 @media (min-width: 425px) {
     .carousel-item {
         min-height: 400px;
@@ -207,8 +193,13 @@ ol li::before {
         font-size: 5em
     }
 
-    .tickets-img-1, .tickets-img-2 {
+    .tickets-img-1, .tickets-img-2{
         height: 350px !important;
+        width: auto;
+    }
+
+    .tickets-img-3 {
+        height: 300px !important;
         width: auto;
     }
 
