--- a/tickevents-placeholder/src/custom.css
+++ b/tickevents-placeholder/src/custom.css
@@ -20,6 +20,7 @@ Place your color classes here if you need to use them more than once.
 
 .bg-red {background-color: red !important;}
 .bg-blue { background: linear-gradient(270deg, #092134, #0C2C45); }
+.bg-pink { background: linear-gradient(90deg, #EA8585, #ED9696);}
 
 /* Fonts */
 /* .ft-patua { font-family: 'Patua One', cursive !important; } */
