--- a/tickevents-placeholder/src/styles.css
+++ b/tickevents-placeholder/src/styles.css
@@ -1,4 +1,31 @@
 /* You can add global styles to this file, and also import other style files */
-html {
-    font-family: 'Montserrat', sans-serif;
+body {
+    font-family: 'Montserrat', sans-serif !important;
+}
+
+.btn {
+    background-color: #5D9881;
+    color: white;
+    font-weight: 500;
+    font-size: 1.1em;
+    transition-duration: 0s;
+    border-radius: 10px;
+    height: 45px;
+    padding: 8px;
+    box-shadow: 0 5px #9AC1B2;
+    transition: background-color 0.2s ease;
+}
+
+.btn:hover {
+    background-color: #467261;
+    color: white;
+    transition: background-color 0.2s ease;
+}
+
+.btn:active {
+    background-color: #467261;
+    box-shadow: 0 3px #294F53;
+    color: white;
+    transform: translateY(4px);
+    transition: background-color 0.2s ease;
 }
