--- a/tickevents-placeholder/src/app/home/home.component.html
+++ b/tickevents-placeholder/src/app/home/home.component.html
@@ -19,17 +19,23 @@
 			<!-- content overlay -->
 			<div class="row content mnh-100 no-gutters justify-content-center">
 				<div class="container px-4 px-md-0 overflow-hidden">
-					<div class="row mnh-80 align-content-center pt-5 animate__animated animate__fadeInRight">
+					<div class="row mnh-80 align-content-center pt-5">
 						<div class="col-12">
-							<h1 class="title ft-montserrat">1 EURO PER TICKET. <br>ALL INCLUSIVE</h1>
+							<h1 class="title ft-montserrat">
+								<span class="title-animation-1 animate__animated animate__fadeInDown">1 </span>
+								<span class="title-animation-2 animate__animated animate__fadeInDown">EURO </span>
+								<span class="title-animation-3 animate__animated animate__fadeInDown">PER </span>
+								<span class="title-animation-4 animate__animated animate__fadeInDown">TICKET.</span><br>
+								<span class="title-animation-5 animate__animated animate__fadeInDown">ALL </span>
+								<span class="title-animation-6 animate__animated animate__fadeInDown">INCLUSIVE</span></h1>
 						</div>
-						<div class="col-12 col-md-8 mt-4">
+						<div class="col-12 col-md-8 mt-4" [ngsReveal]="scrollUpWithDelay">
 							<p class="subtitle">Hou meer geld over aan het einde van je evenement met scherpe
 								servicekosten van Tickevents. Zo kun je meer, vaker, en grotere evenementen organiseren!
 							</p>
 						</div>
 						<div class="w-100"></div>
-						<div class="col-6 col-md-5 col-lg-4 col-xl-3 my-3">
+						<div class="col-6 col-md-5 col-lg-4 col-xl-3 my-3"  [ngsReveal]="scrollUpWithDelay">
 							<a class="btn w-100" type="button" routerLink="/getting-started">
 								Aan de slag
 							</a>
@@ -57,7 +63,7 @@
 				<div class="row no-gutters align-content-center">
 
 					<!-- Tickets image -->
-					<div class="col-12 col-md-7 text-center text-md-left order-2 order-md-1">
+					<div class="col-12 col-md-7 text-center text-md-left order-2 order-md-1" [ngsReveal]="scrollUp">
 						<img src="../assets/double-tickets.svg" alt="tickets" class="tickets-img-1 px-3">
 					</div>
 					<!-- End tickets image -->
@@ -65,14 +71,14 @@
 					<!-- Text section -->
 					<div class="col-12 col-md-5 h-auto order-1 order-md-2">
 						<div class="row no-gutters align-content-center h-100">
-							<div class="col-12">
+							<div class="col-12"  [ngsReveal]="scrollUp">
 								<h5 class="m-0 pink">Lage servicekosten</h5>
 							</div>
-							<div class="col-12">
+							<div class="col-12"  [ngsReveal]="scrollUp">
 								<h2 class="section-title">Lage servicekosten = meer winst onder de streep
 								</h2>
 							</div>
-							<div class="col-12">
+							<div class="col-12"  [ngsReveal]="scrollUp">
 								<p>Jij wilt zoveel mogelijk winst maken uit jouw verkochte ticket. Tickevents snapt dit,
 									en bied
 									jou de scherpe servicekosten van €1,- per verkocht ticket. Omdat dit platform met de
@@ -88,10 +94,10 @@
 	</div>
 
 	<!-- Reviews section carousel -->
-	<div class="row no-gutters justify-content-center bg-blue section-padding align-content-center mnh-25vh">
+	<div class="row no-gutters justify-content-center bg-blue section-padding align-content-center mnh-25vh" >
 		<div class="container px-4 px-md-0">
 			<div id="quoteCarousel" class="carousel slide" data-ride="carousel">
-				<div class="carousel-inner">
+				<div class="carousel-inner" [ngsReveal]="scrollUp">
 					<div class="carousel-item active">
 						<div class="carousel-wrapper">
 							<h1 class="text-center mx-auto lead quote"><i>"Tickevents heeft mij een hoop zorgen
@@ -156,14 +162,14 @@
 				<div class="row">
 					<div class="col-12 col-md-5">
 						<div class="row align-content-center h-100">
-							<div class="col-12">
+							<div class="col-12" [ngsReveal]="scrollUp">
 								<h5 class="m-0 pink">Persoonlijke Benadering</h5>
 							</div>
-							<div class="col-12">
+							<div class="col-12" [ngsReveal]="scrollUp">
 								<h2 class="section-title blue">Je staat er niet alleen voor. Tickevents denkt met je mee
 								</h2>
 							</div>
-							<div class="col-12 blue">
+							<div class="col-12 blue" [ngsReveal]="scrollUp">
 								<p>Tickevents gelooft in de persoonlijke benadering. Werken met abstracte, onbereikbare
 									ticketingplatformen is verleden tijd. Bij Tickevents denken we met je mee over je
 									evenement, en proberen wij jou te helpen waar we maar kunnen. Samen halen we het
@@ -171,7 +177,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-12 col-md-7 text-center text-md-right">
+					<div class="col-12 col-md-7 text-center text-md-right" [ngsReveal]="scrollUp">
 						<img src="../../assets/friendship.svg" alt="tickets" class="tickets-img-2 px-3">
 					</div>
 				</div>
@@ -184,19 +190,19 @@
 		<div class="col">
 			<div class="container px-4 px-md-0">
 				<div class="row">
-					<div class="col-12 col-md-7 mt-3 mt-md-0 text-center text-md-left order-2 order-md-1">
+					<div class="col-12 col-md-7 mt-3 mt-md-0 text-center text-md-left order-2 order-md-1" [ngsReveal]="scrollUp">
 						<img src="../../assets/combo.svg" alt="tickets" class="tickets-img-2 px-3">
 					</div>
 					<div class="col-12 col-md-5 order-1 order-md-2">
 						<div class="row align-content-center h-100">
-							<div class="col-12">
+							<div class="col-12" [ngsReveal]="scrollUp">
 								<h5 class="m-0">Verregaande inzichten</h5>
 							</div>
-							<div class="col-12">
+							<div class="col-12" [ngsReveal]="scrollUp">
 								<h2 class="section-title">Hoe kan je nóg meer tickets verkopen?
 								</h2>
 							</div>
-							<div class="col-12">
+							<div class="col-12" [ngsReveal]="scrollUp">
 								<p>Met de uitgebreide analysemogelijkheden van Tickevents heb je veel inzicht in jouw
 									evenement. Hiermee kan je voor je volgende evenement nieuwe strategieën bedenken op
 									basis van jouw metrieken</p>
@@ -215,8 +221,8 @@
 			<div class="container px-4">
 				<div class="row justify-content-center">
 					<div class="col-12 col-md-8">
-						<h5 class="pink">Het Tickevents verschil</h5>
-						<h2 class="text-left section-title blue success">
+						<h5 class="pink" [ngsReveal]="scrollUp">Het Tickevents verschil</h5>
+						<h2 class="text-left section-title blue success" [ngsReveal]="scrollUp">
 							Tickevents is het enige online ticketingplatform dat succesvol scherpe servicekosten met een
 							waanzinnige klantervaring kan combineren
 						</h2>
@@ -233,18 +239,18 @@
 				<div class="row align-content-center">
 					<div class="col-12 col-md-5">
 						<div class="row align-content-center h-100">
-							<div class="col-12">
+							<div class="col-12" [ngsReveal]="scrollUp">
 								<h2 class="section-title w">Aan de slag met Tickevents</h2>
 							</div>
-							<div class="col-12">
+							<div class="col-12" [ngsReveal]="scrollUp">
 								<p class="w">Begin vandaag nog met het verhogen van je winst. Meld je aan voor meer informatie.</p>
 							</div>
-							<div class="col-12">
+							<div class="col-12" [ngsReveal]="scrollUp">
 								<a class="btn mt-2 mnw-50" type="button" routerLink="/getting-started">Aan de slag</a>
 							</div>
 						</div>
 					</div>
-					<div class="col-12 col-md-7 mt-4 mt-md-0 text-center text-md-right">
+					<div class="col-12 col-md-7 mt-4 mt-md-0 text-center text-md-right" [ngsReveal]="scrollUp">
 						<img src="../../assets/clapping.svg" alt="clapping" class="tickets-img-3 px-3">
 					</div>
 				</div>
