--- a/tickevents-placeholder/src/app/header/header.component.html
+++ b/tickevents-placeholder/src/app/header/header.component.html
@@ -1,20 +1,22 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top w p-0">
     <div class="container p-0">
         <!-- Logo on large displays (expanded navbar) -->
-        <div class="navbar-brand pl-3 pl-md-0" routerLink="/home">
+        <div class="navbar-brand pl-4 pl-md-0" routerLink="/home">
             <img src="../../assets/Logo Black.svg">
         </div>
 
-        <button class="navbar-toggler pr-3" type="button" data-toggle="collapse" data-target="#navContent"
+        <button class="navbar-toggler pr-4" type="button" data-toggle="collapse" data-target="#navContent"
             aria-controls="navContent" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fas fa-bars"></i>
         </button>
 
         <div class="collapse navbar-collapse mt-2 p-3 pr-md-0 ft-alata fs-lr" id="navContent">
             <div class="navbar-nav b ml-auto">
-                <a class="nav-link ml-2 mr-2" data-target="#navContent" routerLink="/home"
+                <a class="nav-link ml-2 mr-2" data-toggle="collapse" data-target=".navbar-collapse.show" routerLink="/home"
                     routerLinkActive="active">Home</a>
-                <a class="nav-link ml-2 mr-2 mr-md-0 pr-md-0" data-target="#navContent" routerLink="/getting-started" routerLinkActive="active">Aan de slag</a>
+                <a class="nav-link ml-2 mr-2" data-toggle="collapse" data-target=".navbar-collapse.show" routerLink="/success-stories" routerLinkActive="active">Succesverhalen</a>
+                <a class="nav-link ml-2 mr-2" data-toggle="collapse" data-target=".navbar-collapse.show" routerLink="/pricing" routerLinkActive="active">Pricing</a>
+                <a class="nav-link ml-2 mr-2 mr-md-0 pr-md-0" data-toggle="collapse" data-target=".navbar-collapse.show" routerLink="/getting-started" routerLinkActive="active">Aan de slag</a>
 
             </div>
         </div>
