--- a/tickevents-placeholder/src/app/pricing/pricing.component.css
+++ b/tickevents-placeholder/src/app/pricing/pricing.component.css
@@ -1,3 +1,4 @@
+/* First section */
 .bg-pricing {
     background-image: url(../../assets/bd-1.svg);
     background-position: center;
@@ -6,6 +7,177 @@
     background-origin: content-box;
     background-attachment: scroll;
 }
+
+/* Overruling the section top-padding to include the header */
+.section-padding {
+    padding-top: 175px !important;
+}
+
+.title {
+    font-weight: bolder;
+    font-size: 2.5em;
+}
+
+.subtitle {
+    font-size: 1.35em;
+    font-weight: 400;
+}
+
+.cls-1 {
+    fill: url(#Naamloos_verloop_5);
+}
+
+.cls-2 {
+    fill: url(#Naamloos_verloop_5-2);
+}
+
+.cls-3 {
+    fill: url(#Naamloos_verloop_5-3);
+}
+
+.cls-4 {
+    fill: url(#Naamloos_verloop_5-4);
+}
+
+.cls-5 {
+    fill: url(#Naamloos_verloop_5-5);
+}
+
+.cls-6 {
+    fill: url(#Naamloos_verloop_13);
+}
+
+.cls-7 {
+    fill: url(#Naamloos_verloop_13-2);
+}
+
+.cls-8 {
+    fill: url(#Naamloos_verloop_13-3);
+}
+
+.cls-9 {
+    fill: url(#Naamloos_verloop_13-4);
+}
+
+.cls-10 {
+    fill: url(#Naamloos_verloop_13-5);
+}
+
+.cls-11 {
+    fill: url(#Naamloos_verloop_13-6);
+}
+
+.cls-12 {
+    fill: url(#Naamloos_verloop_13-7);
+}
+
+.cls-13 {
+    fill: url(#Naamloos_verloop_13-8);
+}
+
+.cls-14 {
+    fill: url(#Naamloos_verloop_5-6);
+}
+
+.cls-15 {
+    fill: url(#Naamloos_verloop_5-7);
+}
+
+.cls-16 {
+    fill: url(#Naamloos_verloop_5-8);
+}
+
+.cls-17 {
+    fill: url(#Naamloos_verloop_5-9);
+}
+
+.cls-18 {
+    fill: url(#Naamloos_verloop_5-10);
+}
+
+.cls-19 {
+    fill: url(#Naamloos_verloop_5-11);
+}
+
+.cls-20 {
+    fill: url(#Naamloos_verloop_5-12);
+}
+
+.cls-21 {
+    fill: url(#Naamloos_verloop_5-13);
+}
+
+.cls-22 {
+    fill: url(#Naamloos_verloop_5-14);
+}
+
+.cls-23 {
+    fill: url(#Naamloos_verloop_5-15);
+}
+
+.cls-24 {
+    fill: url(#Naamloos_verloop_5-16);
+}
+
+.cls-25 {
+    fill: url(#Naamloos_verloop_5-17);
+}
+
+.cls-26 {
+    fill: url(#Naamloos_verloop_5-18);
+}
+
+.cls-27 {
+    fill: url(#Naamloos_verloop_5-19);
+}
+
+.cls-28 {
+    fill: url(#Naamloos_verloop_5-20);
+}
+
+.cls-29 {
+    fill: url(#Naamloos_verloop_5-21);
+}
+
+.cls-30 {
+    fill: url(#Naamloos_verloop_5-22);
+}
+
+.cls-31 {
+    fill: url(#Naamloos_verloop_5-23);
+}
+
+.cls-32 {
+    fill: url(#Naamloos_verloop_5-24);
+}
+
+.cls-33 {
+    fill: url(#Naamloos_verloop_5-25);
+}
+
+.cls-34 {
+    fill: url(#Naamloos_verloop_5-26);
+}
+
+.cls-35 {
+    fill: url(#Naamloos_verloop_5-27);
+}
+
+.cls-36,
+.cls-38 {
+    font-size: 60px;
+    font-family: Alata-Regular, Alata;
+}
+
+.cls-36 {
+    letter-spacing: 0.01em;
+}
+
+.cls-37,
+.cls-38 {
+    letter-spacing: 0.07em;
+}
+/* End first section */
 
 @media (min-width: 765px) {
     .bg-pricing {
